Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 </p>
 
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.fenix">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/fenix.jpg" alt="2" width="45%" height="auto"></a>
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/fenix.jpg" alt="2" width="45%" height="auto"></a>
 
 <a href="https://play.google.com/store/apps/details?id=org.mozilla.klar">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/klar.jpg" alt="2" width="45%" height="auto"></a>
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/klar.jpg" alt="2" width="45%" height="auto"></a>
 <p>
 </p>
  Bei Problemen einfach Cache löschen & weiter geht's. [Funktioniert auch für iPhone]
@@ -128,14 +128,10 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 <p>
 </p>
 <p>   Bessere Wahl:
-<a href="https://t.ly/-U5ed"> <img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/TVbanner.jpg" alt="2" width="100%" height="auto"></a>
-</p>  
+<a href="https://t.ly/-U5ed"> <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/TVbanner.jpg" alt="2" width="100%" height="auto"></a></p>  
 __________
-
-<p>         
-</p>   
- <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/kamin.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/kamin.jpg" alt="26" width="100%" height="auto"></a>
+<p>         </p>    <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/kamin.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/kamin.jpg" alt="26" width="100%" height="auto"></a>
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
@@ -143,26 +139,22 @@ __________
 </p>     
 
 
- <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/tötemich.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/tötemich.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tötemich.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tötemich.jpg" alt="26" width="100%" height="auto"></a>
 Endlich hat Piotr (Mateusz Banasiuk) seiner Natalia (Weronika Ksiazkiewicz) einen Antrag gemacht und wenig später haben die beiden auch schon geheiratet. Das Glück scheint den beiden weiter hold zu sein, als die Nachricht über einen üppigen Lotteriegewinn ins Haus flattert: Zusammen haben sie fünf Millionen Euro gewonnen! Doch was eigentlich ein Grund sein sollte, sich gemeinsam zu freuen, verkehrt sich bald ins Gegenteil: Anstatt Pläne zu schmieden, was man gemeinsam Schönes mit dem Gewinn anstellen könnte, kommen Piotrs und Natalias übelste Seiten zum Vorschein und beide versuchen, den jeweils anderen umzubringen – im Badezimmer, im Auto, beim Klettern, in der Sauna oder beim Abendessen.
  <p>
 </p>     
 
-<a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/swim.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/swim.jpg" alt="1" width="100%" height="auto"></a>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/swim.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/swim.jpg" alt="1" width="100%" height="auto"></a>
  
-Ray Waller (Wyatt Russell) leidet an multipler Sklerose und muss zugunsten seiner Gesundheit seine Baseballkarriere an den Nagel hängen. Um diesen Schritt leichter für alle Beteiligten, inklusive seiner Familie zu machen, soll ein Tapetenwechsel her. Also suchen die Wallers nach einem neuen Haus. Die Entscheidung fällt auf ein Heim mit eigenem Pool im Hintergarten, denn in diesem – so die Hoffnung der Familie – kann Ray auch gleich sein Reha-Programm absolvieren und wieder auf die Beine kommen. Und auch die Kinder Izzy (Amélie Hoeferle) und Elliot (Gavin Warren) finden Gefallen am kühlen Nass. Doch nach einiger Zeit häufen sich die mysteriösen Vorkommnisse. Erst verschwindet die Familienkatze spurlos und dann machen sowohl Izzy als auch Elliot merkwürdige Erfahrungen im Pool. Zudem scheint sich Ray erstaunlich schnell von seiner Krankheit zu erholen, denn schlagartig ist er so fit wie noch nie zuvor in seinem Leben. Auch wenn seine Frau Eve (Kerry Condon) noch nichts davon weiß – Ray hat dem Profisport wohl doch noch nicht endgültig den Rücken gekehrt haben und will zurück zum Baseball. Doch das ist nicht das, was die Familienidylle bedroht. Denn im Pool lauert etwas Böses, das langsam von Ray Besitz ergreift...
-<p>         
-</p>   
- <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/mortal.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/mortal.jpg" alt="26" width="100%" height="auto"></a>
-
+Ray Waller (Wyatt Russell) leidet an multipler Sklerose und muss zugunsten seiner Gesundheit seine Baseballkarriere an den Nagel hängen. Um diesen Schritt leichter für alle Beteiligten, inklusive seiner Familie zu machen, soll ein Tapetenwechsel her. Also suchen die Wallers nach einem neuen Haus. Die Entscheidung fällt auf ein Heim mit eigenem Pool im Hintergarten, denn in diesem – so die Hoffnung der Familie – kann Ray auch gleich sein Reha-Programm absolvieren und wieder auf die Beine kommen. Und auch die Kinder Izzy (Amélie Hoeferle) und Elliot (Gavin Warren) finden Gefallen am kühlen Nass. Doch nach einiger Zeit häufen sich die mysteriösen Vorkommnisse. Erst verschwindet die Familienkatze spurlos und dann machen sowohl Izzy als auch Elliot merkwürdige Erfahrungen im Pool. Zudem scheint sich Ray erstaunlich schnell von seiner Krankheit zu erholen, denn schlagartig ist er so fit wie noch nie zuvor in seinem Leben. Auch wenn seine Frau Eve (Kerry Condon) noch nichts davon weiß – Ray hat dem Profisport wohl doch noch nicht endgültig den Rücken gekehrt haben und will zurück zum Baseball. Doch das ist nicht das, was die Familienidylle bedroht. Denn im Pool lauert etwas Böses, das langsam von Ray Besitz ergreift...<p>         </p>    <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/mortal.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/mortal.jpg" alt="26" width="100%" height="auto"></a>
 Vor Tausenden von Jahren verwüstete eine gewaltige Katastrophe die Erde, doch die Menschheit hat sich ihrer neuen Umgebung längst angepasst. Gigantische Metropolen auf Rädern erhoben sich aus den Trümmern der untergegangenen Zivilisation. Auf der Suche nach den letzten Ressourcen fahren sie über die verdörrte Steppe und verschlingen gnadenlos die kleineren Städte. Zu den großen Metropolen gehört auch London als einer der gewaltigsten rollenden Kolosse. In diesem unerbittlichen Kampf trifft der unscheinbare Tom Natsworthy in einer schicksalshaften Begegnung auf die gefährliche Flüchtige Hester Shaw – zwei Gegensätze prallen aufeinander, zwei Menschen, deren Wege einander nie hätten kreuzen sollen. Sie schmieden eine überraschende Allianz, die über den Fortgang der Menschheitsgeschichte bestimmen könnte.
 <p>         
 </p>   
- <a href="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/halo.mp4">
-<img src="https&#58;&#47;&#47;123&#46;vitaforas&#46;de/halo.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/halo.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/halo.jpg" alt="26" width="100%" height="auto"></a>
 
 Wie geht es weiter für den Master Chief John-117 (Pablo Schreiber) und sein Team aus Elite Spartans? Angesichts der jüngsten Ereignisse haben sie nur ein Ziel: Sich der hereinbrechenden Gefahr des Convenants entgegenzustellen, um eine Invasion zu verhindern. Doch verfügen sie wirklich über die nötigen Mittel, um den übermächtig scheinenden Gegnern etwas entgegenzusetzen? Als John auf schockierende Weise herausfindet, dass das Convenant einen verheerenden Angriff auf die Menschen geplant haben könnte, will er alles daransetzen, diese Pläne zu durchkreuzen. Doch niemand will ihm so recht glauben, weswegen er auf sich allein gestellt versuchen muss, die Wahrheit ans Licht zu bringen. Kann John einen Weg finden, die Menschheit vor ihrem Ende zu bewahren, oder ist ihre Vernichtung bereits besiegelt?
 
