Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@ __________
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
+
+   <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn.jpg" alt="26" width="100%" height="auto"></a>The New Empire   
+
+
+
+<p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/gb&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/gb.jpg" alt="26" width="100%" height="auto"></a>GhostBusters Frozen City
+
+   <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maneater&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maneater.jpg" alt="26" width="100%" height="auto"></a>Maneater
  <p>
 </p>     
 
