--- a/index.html
+++ b/index.html
@@ -63,8 +63,17 @@ Klick Hier
                                                 <!-- Intro -->
                                                         <article id="intro">
                                                                 <h2 class="major">[[WATCH FREE]] @</h2>
-                                                                <span class="image main"><img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/1.jpg" alt="" /></span>
-Just NEW 👇🏼        <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
+                          
+
+   <p>         </p> 
+                                      <span class="image main"><img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/1.jpg" alt="" /></span>
+Just NEW 👇🏼    
+
+   <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="26" width="100%" height="auto"></a>Godzilla X Kong - The New Empire   
+
+
+    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
 <img src="p4.jpg" alt="26" width="100%" height="auto"></a> Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) wird von Meister Shifu (Dustin Hoffman) dazu angehalten, jemanden auszuerwählen, der ihm als Drachenkrieger nachfolgen soll. Er selbst soll nun den nächsten Schritt in seiner Reise antreten und in den Rang eines spirituellen Führers aufsteigen. Doch Po hat noch keine Lust, sein Drachenkrieger-Dasein an den Nagel zu hängen - schließlich fühlt er sich in dieser Rolle sehr wohl. Als Kunde von einem schrecklichen Bösewicht in das Tal des Friedens dringt, der in der Lage ist, seine Gestalt zu verändern und so Pos größte Feinde imitiert, ist für ihn klar, dass er noch einmal zu einer letzten Mission aufbrechen muss. An seiner Seite: Die listige Füchsin Zhen (Awkwafina), die er zuvor bei einem Raubzug überrascht hat. Im Gegenzug für Hafterlass verrät diese nicht nur, dass hinter den schurkischen Tricksereien das Chamäleon (Viola Davis) steckt, sondern ist auch noch bereit, Po zu ihr zu führen. Ihr gemeinsamer Weg führt sie in eine Großstadt, wo der Kung-Fu-Panda schon bald mit dem Gesetz in Konflikt gerät. Doch die eigentliche Herausforderung liegt ja erst noch vor ihm. Kann Po gegen die Verwandlungsfähigkeiten des Chamäleons ankommen?        <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob.jpg" alt="26" width="100%" height="auto"></a>1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
 
@@ -113,9 +122,6 @@ __________
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
-
-   <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="26" width="100%" height="auto"></a>Godzilla X Kong - The New Empire   
 
 
 
