--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@ Klick Hier
 
                                                 <!-- Intro -->
                                                         <article id="intro">
-                                                                <h2 class="major">[[WATCH FREE]] @</h2>
+                  
+<center>                                              <h2 class="major">[[WATCH FREE]]</h2>
                           
 
    <p>         </p> 
-                                      <span class="image main"><img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/1.jpg" alt="" /></span>
-Just NEW 👇🏼    
-
+                                      <span class="image main"><img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/1.jpg" alt="" /></span> 
+JUST👇🏼NEW!    
+</center>
    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="26" width="100%" height="auto"></a>Godzilla X Kong - The New Empire   
 
