Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -73,14 +73,18 @@ JUST👇🏼NEW!
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="26" width="100%" height="auto"></a>  Godzilla X Kong - The New Empire   
 
 
+<p>         </p>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/moon.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/rm1.jpg" alt="26" width="45%" height="auto"></a>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/RM2&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/rm_2.jpg" alt="1" width="45%" height="auto"></a> <p> </p>
+Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veldt irgendwo am Rande des Universums. Die Einheimischen nahmen sie freundlich auf, befürchteten aber schon immer, dass Kora von einer Welt stammt, mit der sie lieber niemals Kontakt haben würden. Sie sollen Recht behalten, denn eines Tages taucht der grausame Admiral Noble (Ed Skrein) auf, ein Abgesandter des tyrannischen Imperium-Herrschers Balisarius (Fra Fee), der Veldt unterjochen und ausbeuten möchte, wie er es schon auf vielen weiteren Planeten und Monden zuvor getan hat. Doch die Invasoren haben ihre Rechnung ohne die kämpferische Kora gemacht, die ursprünglich aus ihren eigenen Reihen stammt. Gemeinsam mit dem kriegerisch gänzlich unerfahrenen Bauern Gunnar (Michiel Huisman) bricht sie zu verschiedenen Nachbargestirnen auf, um die dortigen Bewohner davon zu überzeugen, sich einer Rebellion gegen das Imperium anzuschließen. 
+
+
 
 <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/gb&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/gho.jpg" alt="26" width="100%" height="auto"></a>GhostBusters - Frozen Empire
-
-    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
-<img src="p4.jpg" alt="26" width="100%" height="auto"></a> Po (Stimme im Original: Jack Black; in der dt. Synchronfassung: Hape Kerkeling) wird von Meister Shifu (Dustin Hoffman) dazu angehalten, jemanden auszuerwählen, der ihm als Drachenkrieger nachfolgen soll. Er selbst soll nun den nächsten Schritt in seiner Reise antreten und in den Rang eines spirituellen Führers aufsteigen. Doch Po hat noch keine Lust, sein Drachenkrieger-Dasein an den Nagel zu hängen - schließlich fühlt er sich in dieser Rolle sehr wohl. Als Kunde von einem schrecklichen Bösewicht in das Tal des Friedens dringt, der in der Lage ist, seine Gestalt zu verändern und so Pos größte Feinde imitiert, ist für ihn klar, dass er noch einmal zu einer letzten Mission aufbrechen muss. An seiner Seite: Die listige Füchsin Zhen (Awkwafina), die er zuvor bei einem Raubzug überrascht hat. Im Gegenzug für Hafterlass verrät diese nicht nur, dass hinter den schurkischen Tricksereien das Chamäleon (Viola Davis) steckt, sondern ist auch noch bereit, Po zu ihr zu führen. Ihr gemeinsamer Weg führt sie in eine Großstadt, wo der Kung-Fu-Panda schon bald mit dem Gesetz in Konflikt gerät. Doch die eigentliche Herausforderung liegt ja erst noch vor ihm. Kann Po gegen die Verwandlungsfähigkeiten des Chamäleons ankommen?        <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob&#46;&#109;&#112;&#52;">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob.jpg" alt="26" width="100%" height="auto"></a>1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
-
+   <p>         </p>       
 
 <p>         </p>    <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/friend&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/dying.png" alt="26" width="100%" height="auto"></a>
@@ -126,8 +130,12 @@ __________
 
 4K 3 Stunden realistisch, entspannt abbrennendes Feuer. So wie es sein soll.
 
+   <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/bob.jpg" alt="26" width="100%" height="auto"></a>1976: Auf Jamaika herrschen bürgerkriegsähnliche Zustände. Um für Frieden und Verständigung unter seinen Landsleuten zu werben, kündigt Bob Marley (Kingsley Ben-Adir) ein großes Gratis-Konzert in der Hauptstadt Kingston an. Kurz vor dem Termin dringen jedoch bewaffnete Männer in das Haus ein, in dem der Reggae-Star mit seiner Frau Rita (Lashana Lynch), den gemeinsamen Kindern sowie einigen Freunden und Begleitmusikern lebt. Ohne zu zögern, schießen die Kerle wild um sich. Es gibt zwar mehrere Schwerverletzte, aber zum Glück keine Toten. Um seine Familie und seine Band in Sicherheit zu bringen, stimmt Marley zu, mit ihnen übergangsweise nach London umzuziehen. Dort nimmt er „Exodus“ auf, sein musikalisch als auch in Bezug auf seine Message wichtigstes Album, mit dem er endgültig zum globalen Superstar aufsteigt. Die unverändert heikle Situation in seiner Heimat lässt ihn aber ebenso wenig zur Ruhe kommen wie eine sich zunächst noch subtil, bald immer hartnäckiger ankündigende Erkrankung …
 
 
+    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
+<img src="p4.jpg" alt="26" width="100%" height="auto"></a>   
 
    <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maneater&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/maneater.jpg" alt="26" width="100%" height="auto"></a>Maneater
@@ -139,16 +147,8 @@ __________
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tötemich.jpg" alt="26" width="100%" height="auto"></a>
 Endlich hat Piotr (Mateusz Banasiuk) seiner Natalia (Weronika Ksiazkiewicz) einen Antrag gemacht und wenig später haben die beiden auch schon geheiratet. Das Glück scheint den beiden weiter hold zu sein, als die Nachricht über einen üppigen Lotteriegewinn ins Haus flattert: Zusammen haben sie fünf Millionen Euro gewonnen! Doch was eigentlich ein Grund sein sollte, sich gemeinsam zu freuen, verkehrt sich bald ins Gegenteil: Anstatt Pläne zu schmieden, was man gemeinsam Schönes mit dem Gewinn anstellen könnte, kommen Piotrs und Natalias übelste Seiten zum Vorschein und beide versuchen, den jeweils anderen umzubringen – im Badezimmer, im Auto, beim Klettern, in der Sauna oder beim Abendessen.
 
-
-<p>         </p>
-<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/moon.mp4">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/rm1.jpg" alt="26" width="45%" height="auto"></a>
-<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/RM2&#46;&#109;&#112;&#52;">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/rm_2.jpg" alt="1" width="45%" height="auto"></a> 
-
  <p>
 </p>  
-Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veldt irgendwo am Rande des Universums. Die Einheimischen nahmen sie freundlich auf, befürchteten aber schon immer, dass Kora von einer Welt stammt, mit der sie lieber niemals Kontakt haben würden. Sie sollen Recht behalten, denn eines Tages taucht der grausame Admiral Noble (Ed Skrein) auf, ein Abgesandter des tyrannischen Imperium-Herrschers Balisarius (Fra Fee), der Veldt unterjochen und ausbeuten möchte, wie er es schon auf vielen weiteren Planeten und Monden zuvor getan hat. Doch die Invasoren haben ihre Rechnung ohne die kämpferische Kora gemacht, die ursprünglich aus ihren eigenen Reihen stammt. Gemeinsam mit dem kriegerisch gänzlich unerfahrenen Bauern Gunnar (Michiel Huisman) bricht sie zu verschiedenen Nachbargestirnen auf, um die dortigen Bewohner davon zu überzeugen, sich einer Rebellion gegen das Imperium anzuschließen. 
 
 
  <p>
