Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@ video.play();
 
                                                 <!-- Work -->
                                                         <article id="work">
-                                                                <h2 class="major">FSK 0</h2>
+                 <center>                                               <h2 class="major">FSK 0</h2>
  
                                                               <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 
@@ -1558,7 +1558,7 @@ Nachdem er als Jigsaw schon mehrere Menschen mittels grausamer Folterfallen verm
 </p>        
 
  <a href="https://123.vitaforas.de/dark.mp4">
-<img src="https://123.vitaforas.de/dark.jpg" alt="15" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/darkh.jpg" alt="15" width="100%" height="auto"></a>
 
 Halloween 1963: Jeder Bewohner einer kleinen Stadt im Mittleren Westen der USA weiß, wer October Boy alias Ol'Hacksaw Face alias Sawtooth Jack (Dustin Ceithamer) ist. Egal, unter welchem Namen man ihn auch kennt, er erhebt sich jedes Halloween mit einem Fleischermesser in der Hand von den Getreidefeldern und macht sich auf den Weg in die Stadt, in der Teenager-Banden gespannt auf ihre Chance warten, sich dem legendären Alptraum zu stellen. Sowohl Jäger als auch Gejagter: Der October Boy ist der Preis für den jährlichen Ritus von Leben und Tod. Richie Shepard (Casey Likes) und die rastlose Träumerin Kelly Haines (Emyri Crutchfield) wissen, dass das Töten des October Boy ihre einzige Chance ist, der Aussichtslosigkeit dieser Stadt zu entkommen. Sie sind bereit, alles zu riskieren, einschließlich ihres Lebens, um endlich als Gewinner zu brillieren. Doch bevor die Nacht vorbei ist, wird Pete das schreckliche Geheimnis des October Boy entdecken.
 
@@ -1911,7 +1911,7 @@ Web Services & More. 🐝
         <p>
 __________
 </p>
-
+</center>
 <p>
 Best regards ♥️ &<a href="https://vitaforas.github.io/EasterEgg/">.</a> Vielen Dank<br
 </p>         
