Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1913,7 +1913,7 @@ __________
 </p>
 </center>
 <p>
-Best regards ♥️ &<a href="https://vitaforas.github.io/EasterEgg/">.</a> Vielen Dank<br
+Best regards ♥️ &<a href="http://EasterEgg.nunana.site">.</a> Vielen Dank<br
 </p>         
 <p> 
 </p>
