Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1456,6 +1456,7 @@ YouTube Playlist 👇🏼
 
 
 
+</center>
 
 
 
@@ -1464,7 +1465,8 @@ YouTube Playlist 👇🏼
 
                                                 <!-- About -->
                                                         <article id="about">
-                                                                <h2 class="major">FSK 18</h2>
+                         
+<center>                                       <h2 class="major">FSK 18</h2>
                                                                   <span class="image main"><img src="https://123.vitaforas.de/1.jpg" alt="" /></span>
 
        <p>
@@ -1698,6 +1700,7 @@ Ash (Bruce Campbell) und Linda (Denise Bixler) ziehen sich für ein paar schöne
 </p>
 
 
+</center>
 
 
 
@@ -1708,7 +1711,8 @@ Ash (Bruce Campbell) und Linda (Denise Bixler) ziehen sich für ein paar schöne
 
                                                 <!-- Contact -->
                                                         <article id="contact">
-                                                                <h2 class="major"> </h2>
+                      
+<center>                                          <h2 class="major"> </h2>
 <img src="StreamTV.png" alt="300" width="100%" height="auto">                                                                <form method="post" action="#">
                                                                         <div class="fields">
                                                                                 <div class="field half">
