--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@ JUST👇🏼NEW!
 <img src="https://123.vitaforas.de/ask2.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         </p>
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/ich4.mp4">
+<img src="https://123.vitaforas.de/ich4.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/if.mp4">
+<img src="https://123.vitaforas.de/if.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/garf.mp4">
+<img src="https://123.vitaforas.de/garf.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/kater2.mp4">
+<img src="https://123.vitaforas.de/kater2.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+ 
+
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Crater.mp4">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/cd.jpg" alt="26" width="100%" height="auto"></a>
 
