--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/garf.mp4">
-<img src="https://123.vitaforas.de/garf.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/garf.jpeg" alt="26" width="100%" height="auto"></a>
 
 
 <p>         
