Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@ JUST👇🏼NEW!
  
 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/pool.mp4">
+<img src="https://123.vitaforas.de/pool.jpg" alt="26" width="100%" height="auto"></a>
+
+
+
 
 <p>         
 </p>   
