Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@ JUST👇🏼NEW!
  <a href="https://123.vitaforas.de/pool.mp4">
 <img src="https://123.vitaforas.de/pool.jpg" alt="26" width="100%" height="auto"></a>
 
+<p>         </p>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg" alt="26" width="30%" height="auto"></a>
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool2&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p2.jpg" alt="1" width="30%" height="auto"></a>
+
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool3.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p3.jpg" alt="26" width="30%" height="auto"></a>
+ <p> </p>
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ask2.mp4">
