--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/pool.mp4">
-<img src="https://123.vitaforas.de/pool.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/dead3.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         </p>
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool.mp4">
