Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ __________________☁️
   _______     📺📡                                                </p>
 
 
+<form action="/suche" method="get">
+    <input type="text" name="q" placeholder="Suche...">
+    <button type="submit">Suchen</button>
+</form>
+```
  <p>
 </p>
 Klick Hier
