Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/furiosa.mp4">
-<img src="http://123.vitaforas.de/furiosa.jpg" alt="26" width="100%" height="auto"></a>
+<img src="furiosa.jpg" alt="26" width="100%" height="auto"></a>
 
 <p>         
 </p>   
