Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@ Trickfilmadaption des Kinderbuchklassikers „Das Samtkaninchen“ der britisch-
 </p>
 
 <a href="http://123.vitaforas.de/sereia.mp4">
-<img src="http://123.vitaforas.de/sereia.jpg" alt="13" width="100%" height="auto"></a>
+<img src="sereia.jpg" alt="13" width="100%" height="auto"></a>
 
 Sereia (Stimme im englischsprachigen Original: Sonya Krueger) ist eine Meerjungfrauen-Prinzessin. Immer wieder erzählen ihre Schwestern ihr Geschichten über das wunderbare Leben, das die Menschen an Land führen. Auch von dem angeblich ebenso attraktiven wie charmanten Menschenprinzen Lucas (Courage) hat sie dabei oft gehört. Dass sie ihm eines Tages begegnen und ihn sogar vor dem Ertrinken retten würde, hätte Sereia sich nie träumen lassen. Als es dann doch passiert, verliebt sie sich auf der Stelle. In ihrer Sehnsucht nach Lucas wendet sich die Prinzessin an die Meereshexe Revina (Dee Wallace), die ihr ein Angebot macht: Für ein Jahr gibt sie Sereia eine menschliche Gestalt, in der sie versuchen kann, Lucas' Herz zu gewinnen. Der Preis für diesen Gefallen ist allerdings hoch. Denn sollte es ihr nicht gelingen, wird sie ihre Stimme verlieren und in die Verbannung schwimmen müssen. Doch Sereia ist bereit, das Wagnis einzugehen. Begleitet von ihrem besten Freund, der Schildkröte Sheldon (Alex Lizotte), verlässt sie erstmals ihre Unterwasserwelt und geht an Land …
 
@@ -1301,7 +1301,7 @@ Der Film basiert auf dem Märchen „Die kleine Meerjungfrau“ von Hans Christi
 </p>
 
 <a href="http://123.vitaforas.de/paw.mp4">
-<img src="http://123.vitaforas.de/paw.png" alt="13" width="100%" height="auto"></a>
+<img src="paw.png" alt="13" width="100%" height="auto"></a>
 
 Ein geheimnisvoller Meteorit schlägt in Adventure City ein und verleiht den vierbeinigen Mitgliedern der Paw Patrol übernatürliche Kräfte - sie werden zur Mighty Patrol! Für Hündchen Skye etwa geht damit ein großer Traum in Erfüllung – der allerdings auch so manch neue Gefahren mit sich bringt. Der Erzrivale der Paw Patrol - Humdinger - bricht aus dem Gefängnis aus und schließt sich mit der verrückten Wissenschaftlerin Victoria Vance zusammen, um die Superkräfte der Welpen zu stehlen und sich so selbst in Superschurken zu verwandeln. Es ist nun an den Mighty Pups Adventure City zu beschützen und die Schurken aufzuhalten, bevor es zu spät ist. Die Gruppe begibt sich auf ein neues Abenteuer, das beweist, dass selbst der kleinste Welpe großes bewegen kann. Die Retter-Welpentruppe erlebt ein ganz besonderes Kinoabenteuer.
 
