Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1563,14 +1563,14 @@ Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiliga
 <p>
         </p>
 <a href="http://123.vitaforas.de/gold.mp4">
-<img src="http://123.vitaforas.de/gold.jpg" alt="4" width="100%" height="auto"></a>
+<img src="gold.jpg" alt="4" width="100%" height="auto"></a>
 The Goldsmith (2022 ‧ Horror/Suspense)
 
 Drei Kriminelle, die seit ihrer Kindheit befreundet sind, glauben, das perfekte Ziel für ihren nächsten Raub gefunden zu haben: ein abgelegenes Bauernhaus, in dem ein älterer Goldschmied und seine Frau leben. Doch nachdem sie das Paar gefesselt und sich Zutritt zur Werkstatt verschafft haben, schließt sich die Tür des Kellerraums plötzlich und sie sind eingeschlossen. Das Paar spielt die Eindringlinge gegeneinander aus und zwingt sie, ihre dunkelsten Geheimnisse preiszugeben.  
 <p>
         </p>
 <a href="http://123.vitaforas.de/mice.mp4">
-<img src="http://123.vitaforas.de/mice.jpg" alt="4" width="100%" height="auto"></a>
+<img src="mice.jpg" alt="4" width="100%" height="auto"></a>
 
 Die junge Abi (May Kelly) ist stocksauer auf ihre Mutter Jude (Lynne O'Sullivan) und ihren Vater Keith (Keith Eyles). Denn die sind wegen des massiven Drogenkonsums ihrer Tochter stark besorgt und haben beschlossen, endlich etwas zu unternehmen. Da Abi nicht auf sie hört und offenbar auch gar nicht merkt, dass sie ein Problem hat, haben die Eltern die professionelle Drogenberaterin Cara (Helen Fullerton) engagiert. Die schlägt der Familie vor, eine Intervention in einer abgelegenen Waldhütte abzuhalten. Gemeinsam mit Abis Bruder Mark (Karl Hughes) und ihrer besten Freundin Lara (Lila Lasso) machen sich alle auf den Weg in den Wald. Kaum eingetroffen, taucht dort allerdings plötzlich ein Trio von Mensch-Maus-Hybriden auf, die in einem stillgelegten Geheimlabor entwickelt wurden, und greift die darauf komplett unvorbereiteten Neuankömmlinge an …
 
