Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
  <p>
 </p>
-<form action="suche.html" method="post">
+<form action="http://nunana.site/suche" method="post">
     <input type="text" name="q" placeholder="Suche...">
     <button type="submit">Suchen</button>
 </form>
@@ -74,11 +74,11 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/furiosa.mp4">
-<img src="furiosa.jpg" alt="26" width="100%" height="auto"></a>
+<img src="furiosa.jpg" alt="26" width="100%" height="auto" name="mad_max_furiosa"></a>
 
 <p>         </p>
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool.mp4">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg" alt="26" width="30%" height="auto"></a>
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg" alt="26" width="30%" height="auto" name="deadpool"></a>
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Deadpool2&#46;&#109;&#112;&#52;">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p2.jpg" alt="1" width="30%" height="auto"></a>
 
