Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
  <p>
 </p>
-<form action="http://nunana.site/suche" method="post">
+<form action="http://nunana.site/suche" method="get">
     <input type="text" name="q" placeholder="Suche...">
     <button type="submit">Suchen</button>
 </form>
