--- a/index.html
+++ b/index.html
@@ -118,11 +118,15 @@ JUST👇🏼NEW!
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Crater.mp4">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/cd.jpg" alt="26" width="100%" height="auto"></a>
 
-   <p>          </p>       <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="26" width="100%" height="auto"></a>  Godzilla X Kong - The New Empire   
-
-
 <p>         </p>
+   <p>          </p>       <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/tn&#46;&#109;&#112;&#52;">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="kong" width="45%" height="auto"></a>  
+
+<a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Godzilla.mp4">
+<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/godzilla.jpg" alt="Godzilla" width="45%" height="auto"></a>
+<p>         
+</p>    
+
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/moon.mp4">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/rm1.jpg" alt="26" width="45%" height="auto"></a>
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/RM2&#46;&#109;&#112;&#52;">
@@ -348,11 +352,7 @@ Aus Erde und Dreck wuchs ein Mädchen. Anders als alle anderen. Ihre Zähne ware
 </p>    <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/erde2.mp4">
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/erde2.jpg" alt="26" width="100%" height="auto"></a>
 In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stellt eine existenzielle Gefahr für die Erde dar. Also beschließt die Vereinte Regierung der Erde, gigantische Raketentriebwerke zu konstruieren, um unseren Planeten von der Sonne wegzubewegen - weit weg von der Reichweite der feurigen Sonneneruptionen. Allerdings stoßen sie auf Widerstand, als Terroristen eine Matrix entwickeln, um das Bewusstsein jedes Menschen zu speichern. Die Reise durch das Universum ist jedoch gefährlich, und die letzte Überlebenschance der Menschheit hängt von einer Gruppe junger Menschen ab, die mutig genug sind, eine gefährliche Operation auf Leben und Tod durchzuführen, um die Erde zu retten.<p>         
-</p>    <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Godzilla.mp4">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/godzilla.jpg" alt="26" width="100%" height="auto"></a>
-Japan, 1945: Kurz nach dem Ende des Zweiten Weltkriegs täuscht der Kamikaze-Pilot Koichi Shishima (Ryunosuke Kamiki) technische Probleme bei seinem Flugzeug vor und landet auf der Insel Odo. Hier begegnet er zum ersten Mal der Riesenechse Godzilla, die die gesamte Insel dem Erdboden gleichmacht. Zwei Jahre später: Shishima ist inzwischen nach Tokio zurückgekehrt, wo er Frau und Kind hat. Zur gleichen Zeit machen Berichte die Runde, dass der durch Atomtests im Bikini-Atoll mutierte Godzilla mehrere US-Kriegsschiffe zerstört hat und sich bereits auf den Weg nach Japan befindet...<p>         
 </p>    
-
 
 
 
