--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ JUST👇🏼NEW!
 <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/GxK.webp" alt="kong" width="45%" height="auto"></a>  
 
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Godzilla.mp4">
-<img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/godzilla.jpg" alt="Godzilla" width="45%" height="auto"></a>
+<img src="Picsart_24-08-16_03-12-01-039.jpg" alt="Godzilla" width="45%" height="auto"></a>
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ask2.mp4">
