Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@ JUST👇🏼NEW!
 
 <p>         
 </p>   
+ <a href="http://123.vitaforas.de/Borderlands.mp4">
+<img src="Borderlands.jpg" alt="26" width="100%" height="auto" name="mad_max_furiosa"></a>
+
+
+<p>         
+</p>   
  <a href="http://123.vitaforas.de/furiosa.mp4">
 <img src="furiosa.jpg" alt="26" width="100%" height="auto" name="mad_max_furiosa"></a>
 
@@ -97,6 +103,17 @@ JUST👇🏼NEW!
  <a href="https://123.vitaforas.de/ich4.mp4">
 <img src="https://123.vitaforas.de/ich4.jpg" alt="ich" width="100%" height="auto"></a>
 
+
+<p>         
+</p>   
+ <a href="http://123.vitaforas.de/minions.mp4">
+<img src="minions.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
+ 
+ <a href="http://123.vitaforas.de/minions2.mp4">
+<img src="minions2.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
+
+ <a href="http://123.vitaforas.de/minions3.mp4">
+<img src="minions3.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
 
 <p>          </p>    
 
