Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@ JUST👇🏼NEW!
 
 <p>         
 </p>   
+
+ <a href="http://123.vitaforas.de/minions2.mp4">
+<img src="minions2.jpg" alt="26" width="45%" height="auto" name="ich2"></a>
+
+ <a href="http://123.vitaforas.de/minions3.mp4">
+<img src="minions3.jpg" alt="26" width="45%" height="auto" name="ich3"></a>
+
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/ich4.mp4">
 <img src="https://123.vitaforas.de/ich4.jpg" alt="ich" width="100%" height="auto"></a>
 
@@ -107,13 +116,8 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/minions.mp4">
-<img src="minions.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
+<img src="minions.jpg" alt="26" width="30%" height="auto" name="minions1"></a>
  
- <a href="http://123.vitaforas.de/minions2.mp4">
-<img src="minions2.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
-
- <a href="http://123.vitaforas.de/minions3.mp4">
-<img src="minions3.jpg" alt="26" width="30%" height="auto" name="mad_max_furiosa"></a>
 
 <p>          </p>    
 
